--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -42,17 +42,26 @@ Rekisteröintisivulla opiskelija rekisteröityy järjestelmän käyttäjäksi. Rekister
 tiedot: etunimi, sukunimi, käyttökieli, sähköposti, opiskelijanumero tai henkilötunnus, sekä
 haluttu käyttäjätunnus ja salasana
 
+Täyttää vaatimukset: 4
+
+
 \subsection{Käyttäjätietojen muokkaaminen}
 Käyttäjätietosivulla sisäänkirjautunut käyttäjä voi muokata rekisteröintitietojaan, poislukien 
 tunnus joka on valittu rekisteröidyttäessä. Käyttäjätietojen muokkaamisen ei tarvitse toimia
 opettajien tunnusten kanssa, mutta odotettavissa on, että opettajatunnusten tukeminen ei aiheuta
 minkäänlaista lisätyötä.
 
+Täyttää vaatimukset: 6,8
+
+
 \subsection{Kirjautuminen}
 Kirjautumissivulla käyttäjä syöttää tunnuksensa, salasanansa ja pudotusvalikosta kurssin nimen.
 Kurssivalinta määrittää, että minkä kurssin suorituksiin opiskelijan tekemät vastaukset tallennetaan.
 Opettajan ollessa kyseessä kurssivalinnalla ei ole merkitystä. Jos kirjautuminen onnistuu, näytetään
 tehtävälistaus. Jos kirjautuminen epäonnistuu, käyttäjä palautetaan kirjautumissivulle.
+
+Täyttää vaatimukset: 5,2
+
 
 \subsection{Kurssien ja tehtävien valinta (opettaja)}
 Kirjautumisen jälkeen opettajalle näytetään kurssilistaus josta opettaja voi siirtyä
@@ -63,10 +72,16 @@ Samalla sivulla näytetään myös tehtävälista. Listassa näytetään tehtävän kieli, 
 ja nimi, sekä viimeinen muokkauspäivä ja muokkaaja. Listattuja tehtäviä voi muokata ja
 poistaa, sekä käynnistää uuden tehtävän luomisen.
 
+Täyttää vaatimukset: 18,21
+
+
 \subsection{Tehtävän määrittely (opettaja)}
 Tehtävänmäärittelysivulla opettaja voi luoda uuden tehtävän tai muokata olemassa olevaa
 tehtävää. Tehtävälle määritellään nimi, tehtävänanto, tarkastustyyppi (malliratkaisu/kiinteät arvot),
 tehtävätyyppi (täyttötehtävä/ohjelmointitehtävä), sekä tarkastuskriteerit ja kriteerien palautteet.
+
+Täyttää vaatimukset: 9,10,12,13,14,15,16,17,20,30-43,45-51,53,54
+
 
 \subsection{Kurssin statistiikka (opettaja)}
 Kurssin statistiikkasivulla opettajalle näytetään lista kaikkien kurssin tehtäviä suorittaneiden
@@ -75,10 +90,16 @@ sekä onnistuneesti ratkaistujen tehtävien määrä. Lista on helposti tulostettavas
 
 Listassa opiskelijan nimi toimii linkkinä ko. opiskelijan käyttäjätietosivulle.
 
+Täyttää vaatimukset: 23
+
+
 \subsection{Käyttäjän tiedot (opettaja)}
 Käyttäjän statistiikkasivulla opettajalle näytetään opiskelijan tarkemmat tiedot.
 Henkilötiedoista näytetään salasanaa lukuunottamatta kaikki rekisteröintitiedot.
 Sivu sisältää myös napin, jota käyttämällä opettaja voi poistaa käyttäjän järjestelmästä.
+
+Täyttää vaatimukset: 22
+
 
 \subsection{Käyttäjien haku (opettaja)}
 Hakusivulla opettaja voi etsiä nimen perustella käyttäjiä, ja siirtyä käyttäjätietosivulle
@@ -88,6 +109,8 @@ tarkastelemaan käyttäjän tarkempia tietoja.
 Kirjautumisen jälkeen opiskelijalle näytetään tehtävälista, josta opiskelija voi valita
 tehtävän ratkaistavaksi. Listassa näytetään tehtävän kieli, aihepiiri ja nimi, sekä tieto
 onko opiskelija yrittänyt jo tehtävän suoritusta ja onko yritys onnistunut.
+Täyttää vaatimukset: 19(=25),29
+
 
 \subsection{Tehtävään vastaaminen (opiskelija)}
 Opiskelijan ratkaistavaksi valitsemasta tehtävästä näytetään nimi ja tehtävänanto,
@@ -98,12 +121,23 @@ Kun opiskelija on kirjoittanut vastauksensa, hän painaa "Suorita" -nappia joka v
 takaisin tehtävävastaussivulle. Sivulla näytetään samat tiedot kuin alussa, mutta
 lisäksi näytetään palautetta ratkaisun onnistumisesta/epäonnistumisesta.
 
+Täyttää vaatimukset: 9,10,26,27,28,52
+
+
 \subsection{Monikielisyys}
 Opiskelijan käyttöliittymä toteutetaan suomen- ja englanninkielisenä. Opiskelija
 valitsee rekisteröitymisen yhteydessä järjestelmän oletuskielen. Kirjautuessaan 
 järjestelmään opiskelija voi halutessaan vaihtaa kielen toiseksi.
 
 Opettajan käyttöliittymä toteutetaan ainoastaan englanniksi.  
+
+Täyttää vaatimukset: 57,58
+
+
+
+
+
+
 
 
 \newpage
