*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -163,8 +163,10 @@ tarvetta ja laajuutta on vaikea arvioida etukäteen, niiden yksityiskohdat jätetä
 TitoState luokan implementoijan vastuulle.
 
 \begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/yleiskuva1.eps}
-	\caption{yleiskuva1}
+%	\includegraphics[width=15cm] {muut_kaaviot/yleiskuva1.eps}
+%	\caption{yleiskuva1}
+	\includegraphics[width=15cm] {muut_kaaviot/arkkitehtuuri.eps}
+	\caption{Arkkitehtuuri}
 \end{figure}
 
 
