*** empty log message ***

--- a/Documents/pohjat/termit.tex
+++ b/Documents/pohjat/termit.tex
@@ -22,3 +22,5 @@ eikä sitä ole otettu käyttöön.
 Kriteeri=Sääntö jonka mukaan tehtävän oikeellisuus tarkistetaan. Kriteereitä voi olla monta yhdelle tehtävälle.
 
 Aihepiiri=Tehtävälle täytyy määritellä aihepiiri, johon tehtävä kuuluu. 
+
+AJAX=Tekniikka vuorovaikutteisten verkkosovellusten luomiseen. Tekniikka vaihtaa pieniä määriä dataa palvelimen kanssa taustalla, niin ettei koko verkkosivua tarvitse ladata uudelleen joka kerta käyttäjän tehdessä muutoksen.
