--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -19,8 +19,8 @@ tehtävien määrittelyyn ja toteutukseen. eAssarin keskeneräisyydestä johtuen kehy
 tuotteella asetettujen vaatimusten täyttämiseksi.
 
 Järjestelmä toteutetaan Java-kielellä ja järjestelmän käyttö vaatii, että selain tukee 
-JavaScript-kieltä ja CSS-tyylitiedostoja. Järjestelmä toimii uusimmilla Firefox ja Internet 
-Explorer-selaimilla.
+JavaScript-kieltä ja CSS-tyylitiedostoja. Järjestelmä toimii vuoden 2006 yleisimmillä Firefox ja Internet 
+Explorer-selainversioilla.
 
 
 
@@ -39,7 +39,7 @@ Tämä luku kuvaa järjestelmän HTML-sivut ja sen, mitä toimintoja ne tarjoavät käy
 			
 \subsection{Rekisteröityminen}
 Rekisteröintisivulla opiskelija rekisteröityy järjestelmän käyttäjäksi. Rekisteröinti vaatii seuraavat 
-tiedot: etunimi, sukunimi, käyttökieli, sähköposti, opiskelijanumero tai henkilötunnus, sekä
+tiedot: etunimi, sukunimi, käyttökieli, kurssi, sähköpostiosoite, opiskelijanumero tai henkilötunnus, sekä
 haluttu käyttäjätunnus ja salasana
 
 Täyttää vaatimukset: 4
@@ -55,10 +55,10 @@ Täyttää vaatimukset: 6,8
 
 
 \subsection{Kirjautuminen}
-Kirjautumissivulla käyttäjä syöttää tunnuksensa, salasanansa ja pudotusvalikosta kurssin nimen.
-Kurssivalinta määrittää, että minkä kurssin suorituksiin opiskelijan tekemät vastaukset tallennetaan.
-Opettajan ollessa kyseessä kurssivalinnalla ei ole merkitystä. Jos kirjautuminen onnistuu, näytetään
-tehtävälistaus. Jos kirjautuminen epäonnistuu, käyttäjä palautetaan kirjautumissivulle.
+Kirjautumissivulla käyttäjä syöttää tunnuksensa, salasanansa ja pudotusvalikoista kurssin nimen ja
+käyttökielen. Kurssivalinta määrittää, että minkä kurssin suorituksiin opiskelijan tekemät vastaukset
+tallennetaan. Opettajan ollessa kyseessä kurssivalinnalla ei ole merkitystä. Jos kirjautuminen onnistuu,
+näytetään tehtävälistaus. Jos kirjautuminen epäonnistuu, käyttäjä palautetaan kirjautumissivulle.
 
 Täyttää vaatimukset: 5,2
 
@@ -77,7 +77,7 @@ Täyttää vaatimukset: 18,21
 
 \subsection{Tehtävän määrittely (opettaja)}
 Tehtävänmäärittelysivulla opettaja voi luoda uuden tehtävän tai muokata olemassa olevaa
-tehtävää. Tehtävälle määritellään nimi, tehtävänanto, tarkastustyyppi (malliratkaisu/kiinteät arvot),
+tehtävää. Tehtävälle määritellään nimi, aihepiiri, tehtävänanto, tarkastustyyppi (malliratkaisu/kiinteät arvot),
 tehtävätyyppi (täyttötehtävä/ohjelmointitehtävä), sekä tarkastuskriteerit ja kriteerien palautteet.
 
 Täyttää vaatimukset: 9,10,12,13,14,15,16,17,20,30-43,45-51,53,54
@@ -93,7 +93,7 @@ Listassa opiskelijan nimi toimii linkkinä ko. opiskelijan käyttäjätietosivulle.
 Täyttää vaatimukset: 23
 
 
-\subsection{Käyttäjän tiedot (opettaja)}
+\subsection{Opiskelijan tiedot (opettaja)}
 Käyttäjän statistiikkasivulla opettajalle näytetään opiskelijan tarkemmat tiedot.
 Henkilötiedoista näytetään salasanaa lukuunottamatta kaikki rekisteröintitiedot.
 Sivu sisältää myös napin, jota käyttämällä opettaja voi poistaa käyttäjän järjestelmästä.
@@ -101,25 +101,29 @@ Sivu sisältää myös napin, jota käyttämällä opettaja voi poistaa käyttäjän järjes
 Täyttää vaatimukset: 22
 
 
-\subsection{Käyttäjien haku (opettaja)}
+\subsection{Opiskelijan haku (opettaja)}
 Hakusivulla opettaja voi etsiä nimen perustella käyttäjiä, ja siirtyä käyttäjätietosivulle
 tarkastelemaan käyttäjän tarkempia tietoja.
+
 
 \subsection{Tehtävien valinta (opiskelija)}
 Kirjautumisen jälkeen opiskelijalle näytetään tehtävälista, josta opiskelija voi valita
 tehtävän ratkaistavaksi. Listassa näytetään tehtävän kieli, aihepiiri ja nimi, sekä tieto
-onko opiskelija yrittänyt jo tehtävän suoritusta ja onko yritys onnistunut.
+onko opiskelija yrittänyt jo tehtävän suoritusta, yritysten määrä ja onko yritys onnistunut.
+
 Täyttää vaatimukset: 19(=25),29
 
 
 \subsection{Tehtävään vastaaminen (opiskelija)}
 Opiskelijan ratkaistavaksi valitsemasta tehtävästä näytetään nimi ja tehtävänanto,
-mahdollinen valmis koodi mikäli kyseessä on täyttötehtävä, sekä tekstialue johon
-opiskelija kirjoittaa vastauksensa. Lisäksi on linkki jolla pääsee takaisin tehtävälistaukseen.
+mahdollinen valmis koodi mikäli kyseessä on täyttötehtävä, sekä tekstialueet johon
+opiskelija kirjoittaa ohjelman ja sille annettavat syötteet. Lisäksi on linkki jolla
+pääsee takaisin tehtävälistaukseen.
 
 Kun opiskelija on kirjoittanut vastauksensa, hän painaa "Suorita" -nappia joka vie
 takaisin tehtävävastaussivulle. Sivulla näytetään samat tiedot kuin alussa, mutta
-lisäksi näytetään palautetta ratkaisun onnistumisesta/epäonnistumisesta.
+lisäksi näytetään palautetta ratkaisun onnistumisesta/epäonnistumisesta, sekä 
+Titokoneen suorituksen lopputila.
 
 Täyttää vaatimukset: 9,10,26,27,28,52
 
@@ -209,13 +213,14 @@ luokkaa voidaan käyttää virtuaalikoneen sisällä mistä vaan.
 \subsection{Tasktype}
 Tasktype on eAssari-kehyksen tarvitsema taulu, joka määrittelee tehtävätyypin käyttämät
 Analyzer ja Displayer luokat. Tauluun olisi mahdollista tallentaa myös muuta
-tehtävätyyppikohtaista tietoa, mutta ainakaan ensimmäisen iteraation kohdalla tälle ei ole
-näkyvissä tarvetta.
+tehtävätyyppikohtaista tietoa, mutta tälle ei ole näkyvissä tarvetta.
 
 \subsection{Task}
 Task määrittelee tehtävän. Task-tauluun tallennetaan kriteerietä lukuunottamatta tehtävän kaikki tiedot.
 Tunniste, nimi ja muokkaustiedoille on olemassa valmiit sarakkeet, muut tiedot tallennetaan XML-muodossa
 taskmetadata sarakakkeeseen.
+
+Task taulua on TitoTrainer kehityksen aikana muutettu kasvattamalla taskmetadata-kentän kokoa.
 
 \subsection{Course}
 Määrittelee kurssin nimen ja tunnisteen. Tähän tauluun viitataan useista muista tauluista,
@@ -240,7 +245,7 @@ on aina Task rivien määrä * Course rivien määrä.
 
 \subsection{Attributevalues}
 Yleiskäyttöinen varasto jonne voi tallentaa mitä tahansa lisätietoa koskien mitä tahansa
-muuta taulua. Tänne tallennetaan tehtävien kriteerit.
+muuta taulua. Tänne tallennetaan tehtävien kriteerit ja aihepiirilista.
 
 \subsection{EAuser}
 Taulu kaikkien käyttäjätietojen tallentamiseen. Sekä oppilaat ja opettajat tallennetaan
@@ -365,7 +370,7 @@ virheilmoituksen.
 \subsection{ModifyUser.jsp}
 \begin{figure}[h!]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Käyttäjätietojen_muokkaaminen.eps}
-	\caption{Käyttäjätietojen muokkaaminen}
+	\caption{Käyttäjätietojen muokkaaminen (huom kaksi erillistä sivulatausta)}
 \end{figure}
 \newpage
 
@@ -386,23 +391,25 @@ Ei kaaviota. Sisältää vain opiskelijan tehtävälistauksen.
 	\includegraphics[width=15cm] {sekvenssikaaviot/Kurssinluonti.eps}
 	\caption{Kurssin luominen ja tehtävien lisääminen luotuun kurssiin}
 \end{figure}
-\newpage
+%\newpage
 
 
 \subsection{CourseStatistics.jsp}
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_course_tasks.eps}
-	\caption{Kurssin suoritustilastot opettajalle}
-\end{figure}
-\newpage
+Yksinkertaisen tilastotaulukon toteutus suoraviivaista, sekvenssikaavio ei tarpeen.
+%\begin{figure}[ht]
+%	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_course_tasks.eps}
+%	\caption{Kurssin suoritustilastot opettajalle}
+%\end{figure}
+%\newpage
 
 
 \subsection{UserInfo.jsp}
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_user_info.eps}
-	\caption{statistiikka user info}
-\end{figure}
-\newpage
+Yksinkertaisen käyttäjätietonäkymän sekä tilastotaulukon toteutus suoraviivaista, sekvenssikaavio ei tarpeen.
+%\begin{figure}[ht]
+%	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_user_info.eps}
+%	\caption{statistiikka user info}
+%\end{figure}
+%\newpage
 %\begin{figure}[ht]
 %	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_sivut.eps}
 %	\caption{statistiikka sivut (rikkoo layoutin!}
@@ -411,10 +418,11 @@ Ei kaaviota. Sisältää vain opiskelijan tehtävälistauksen.
 
 
 \subsection{SearchUsers.jsp}
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_search_users.eps}
-	\caption{Käyttäjähaku opettajalle}
-\end{figure}
+Käyttäjien haku nimen mukaan. Sekvenssikaavio ei tarpeen.
+%\begin{figure}[ht]
+%	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_search_users.eps}
+%	\caption{Käyttäjähaku opettajalle}
+%\end{figure}
 \newpage
 
 
@@ -427,7 +435,7 @@ Ei kaaviota. Sisältää vain opiskelijan tehtävälistauksen.
 
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Taskin_muokkaaminen.eps}
-	\caption{Tehtävän muokkaaminen}
+	\caption{Tehtävän muokkaaminen (huom kaksi erillistä sivulatausta)}
 \end{figure}
 \newpage
 
