*** empty log message ***

--- a/Documents/projektisuunnitelma/dokumentti.tex
+++ b/Documents/projektisuunnitelma/dokumentti.tex
@@ -17,9 +17,9 @@
 
 \begin{document}
 \pagestyle{empty}
-\begin{large}
-\defnote{}
-\end{large}
+%\begin{large}
+%\defnote{}
+%\end{large}
 \pagestyle{plain}
 % Tulostetaan kansisivu, etusivu ja sisällysluettelo.
 \maketitle
