--- a/Documents/projektisuunnitelma/versio.tex
+++ b/Documents/projektisuunnitelma/versio.tex
@@ -1,3 +1,4 @@
 0.1 & 18.9.2006 & Ensimmäinen versio \\
-1.0 & 2.10.2006 & Ensimmäinen valmis versio
-1.1 & 16.10.2006 & Muutettua riskejä ja lisätty LOC
+1.0 & 2.10.2006 & Ensimmäinen valmis versio\\
+1.1 & 16.10.2006 & Muutettua riskejä ja lisätty LOC\\
+1.2 & 8.12.2006 & Päivitetty ottaen huomioon myös toisen syklin muutokset\\
