*** empty log message ***

--- a/Documents/projektisuunnitelma/dokumentti.tex
+++ b/Documents/projektisuunnitelma/dokumentti.tex
@@ -5,7 +5,7 @@
 % usein k‰ytettyjen pakkauksien \usepackage-komennot, jotka pit‰‰
 % aktivoidaan ottamalla rivin alusta kommenttimerkki pois.
 %
-% \usepackage{graphicx}		% kuvien k‰sittelyyn
+ \usepackage{graphicx}		% kuvien k‰sittelyyn
 % \usepackage{url}		% verkko-osoitteiden tulostamiseen
 %
 
