*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -1,9 +1,51 @@
 \section{Johdanto}
+Toteutimme Ohjelmistotuotantoprojekti-kurssina konekielisen ohjelmoinnin harjoitusympäristön (TitoTrainer).
 
-\section{Sanasto}
+Järjestelmä sisältää kaksi puolta, opettajan ja opiskelijan käytttöliittymät. 
+
+Opettajan on mahdollista luoda konekielisiä tehtäviä ja määritellä niiden tarkastuksessa käytettävät 
+kriteerit. Lisäksi opettaja voi katsoa kurssi- sekä oppilaskohtaisia statistiikkoja.
+
+Opiskelija voi luoda järjestelmään tunnuksen ja ratkaista ohjelmointitehtäviä.
+
+
+
+\section{Projektin kulku}
+Projekti käynnistettiin 4.9.2006. Tällöin pidetyssä aloituspalaverissa vastuualueet jaettiin melko sujuvasti.
+Projektipäällikön, vaatimusmäärittelyvastaavan ja dokumentointivastaavan paikat jaettiin halukkaille.
+Suunnitteluvastaavan, koodivastaavan ja testausvastaavan vastuualueita pyöriteltiin aikansa, kunnes yksi 
+kerrallaan ehdokkaat kyllästyivät ja valitsivat jonkin vaihtoehdoista. 
+
+Ryhmämme työskenteli suurimmaksi osaksi ryhmätyömuodossa. Aikaa vietettiin paljon yhdessä ja pääasiallisena
+työskentelytilana oli ATK-luokka Exactumissa. Kaikki ryhmän jäsenet osallistuivat ainakin jollain 
+tasolla projektin kaikkiin työvaiheisiin.
+
+\subsection{Aikataulu}
+
+Ensimmäinen sykli
+
+Projektipäällikkö laati alussa aikataulun, jossa pääosin pysyttiin koko projektin ajan. Projekti oli tästä
+aikataulusta ehkä viikon myöhässä ensimmäisessä iteraatiossa, ja toisessa iteraatiossa pysyttiin
+aikataulussa kokonaisuudessaan.
+
+Alussa aikaa kului paljon EAssariin ja Titokoneeseen tutustumiseen.
+Vaatimusmäärittelyyn osallistuivat kaikki, tosin vaatimusvastaava 
+
+Suunnitteluvaihe pääsi alkamaan hieman myöhässä, ja alussa oli vähän vaikeuksia päästä alkuun, koska 
+osajärjestelmistä ei ollut kattavaa yleiskuvaa. Tutustuimme EAssarin tietokantarakenteeseen.
+Ensimmäiseksi yritettiin miettiä luokkakaavioita, mutta niiden avulla emme päässeet asiassa alkuun.
+Sitten vain päätetiin että tehdään jotain ja 
+
+
+Ryhmän henki ja ilmapiiri oli erinomainen.
 
 \section{Lopputuotteen esittely}
 
 \section{Dokumenttien tiivistelmät}
 
 \section{Projektin päättöanalyysi}
+
+\section{Mielin määrin kahvia tupakkaa}
+Kulutus:
+
+Mikko joi monta batteryä
