*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -34,7 +34,11 @@ Vaatimusmäärittelyyn osallistuivat kaikki, tosin vaatimusvastaava
 Suunnitteluvaihe pääsi alkamaan hieman myöhässä, ja alussa oli vähän vaikeuksia päästä alkuun, koska 
 osajärjestelmistä ei ollut kattavaa yleiskuvaa. Tutustuimme EAssarin tietokantarakenteeseen.
 Ensimmäiseksi yritettiin miettiä luokkakaavioita, mutta niiden avulla emme päässeet asiassa alkuun.
-Sitten vain päätetiin että tehdään jotain ja 
+Sitten vain päätetiin että tehdään jotain ja aloimme tekemään sekvenssikaavioita järjestelmän 
+toiminnoista. 
+
+Myös suunnitteluun osallistuivat kaikki, mutta suunnitteluvastaavan panos oli kuitenkin ratkaiseva.
+Suunnitteluvastaava käytti suunnitteluun aikaa 65,5 tuntia.
 
 
 Ryhmän henki ja ilmapiiri oli erinomainen.
