*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -8,6 +8,9 @@ kriteerit. Lisäksi opettaja voi katsoa kurssi- sekä oppilaskohtaisia statistiikk
 
 Opiskelija voi luoda järjestelmään tunnuksen ja ratkaista ohjelmointitehtäviä.
 
+Järjestelmä on tarkoitus ottaa käyttöön Tietojenkäsittelytieteen laitoksella Tietokoneen toiminta -kurssia
+luennoitaessa. Kurssin opiskelijat voivat käydä ratkaisemassa järjestelmässä tehtäviä ja luennoitsija
+saa tästä tilastotietoa.
 
 
 \section{Projektin kulku}
@@ -22,14 +25,17 @@ tasolla projektin kaikkiin työvaiheisiin.
 
 \subsection{Aikataulu}
 
-Ensimmäinen sykli
+\subsubsection{Ensimmäinen sykli}
 
-Projektipäällikkö laati alussa aikataulun, jossa pääosin pysyttiin koko projektin ajan. Projekti oli tästä
-aikataulusta ehkä viikon myöhässä ensimmäisessä iteraatiossa, ja toisessa iteraatiossa pysyttiin
-aikataulussa kokonaisuudessaan.
+Projektipäällikkö laati alussa aikataulun, jossa pääosin pysyttiin koko projektin ajan.
+Projektipäällikön ehdotuksesta käyttöön otettiin iteratiivinen prosessimalli, joka osoittautui
+juuri tälle projektille sopivaksi. Projektin alussa ei olisi ollut riittävästi tietoa vesiputousmallin 
+käyttöönottoon. Projekti oli tästä aikataulusta ehkä viikon myöhässä ensimmäisessä iteraatiossa, ja toisessa
+iteraatiossa pysyttiin aikataulussa kokonaisuudessaan.
 
 Alussa aikaa kului paljon EAssariin ja Titokoneeseen tutustumiseen.
 Vaatimusmäärittelyyn osallistuivat kaikki, tosin vaatimusvastaava 
+Vaatimusdokumentista pidettiin epävirallinen katselmustilaisuus.
 
 Suunnitteluvaihe pääsi alkamaan hieman myöhässä, ja alussa oli vähän vaikeuksia päästä alkuun, koska 
 osajärjestelmistä ei ollut kattavaa yleiskuvaa. Tutustuimme EAssarin tietokantarakenteeseen.
@@ -38,18 +44,62 @@ Sitten vain päätetiin että tehdään jotain ja aloimme tekemään sekvenssikaavioita
 toiminnoista. 
 
 Myös suunnitteluun osallistuivat kaikki, mutta suunnitteluvastaavan panos oli kuitenkin ratkaiseva.
-Suunnitteluvastaava käytti suunnitteluun aikaa 65,5 tuntia.
+Suunnitteluvastaava 
 
 
-Ryhmän henki ja ilmapiiri oli erinomainen.
+\subsubsection{Toinen sykli}
 
-\section{Lopputuotteen esittely}
+Projektimme sai pitää ansaitun lomaviikon yliopiston taukoviikolla. Toisessa iteraatiossa työkalut
+ja menetelmät olivat jo tuttuja, ja työt käynnistyivät huomattavasti rivakammin. Toisen iteraation
+alussa esiteltiin asiakkaalle projektin sen hetkistä tuotosta, joka jo sisälsi toimivan opettajan
+käyttöliittymän ilman statistiikkoja. Asiakkaan palautteen perusteella tehtiin joitain muutoksia ja
+otettiin muutama uusi vaatimus.
 
-\section{Dokumenttien tiivistelmät}
+Toisen iteraation vaatimusmäärittely meni nopeasti, koska ensimmäisessä iteraatiossa oli jo 
+määritelty suurin osa koko projektin vaatimuksista. Toisessa iteraatiossa tehtiin tarkka syötteet
+ja tulosteet dokumentti, joka tarkasti määritteli millaisia syötteitä järjestelmä hyväksyy.
+Toisessa suunnitteluvaiheessa täydennettiin suunnitteludokumenttia ja pidettiin tästä virallinen
+katselmus. Virallinen katselmus oli aika vaisu tilaisuus, ja totesimme että vaatimusdokumentin 
+epävirallinen katselmus oli tätä virallista parempi. 
 
-\section{Projektin päättöanalyysi}
+
+Ryhmän henki ja ilmapiiri oli erinomainen. Ryhmäläiset tukivat toisiaan, ja apua sai aina kun sitä
+tarvitsi.
+
+\section{Suhteet muihin osajärjestelmiin}
+
+\subsection{Titokone}
+
+Titokone oli hyvin toteutettu ja se oli helppokäyttöinen. Titokoneen integroimisessa ei kohdattu
+lähes ollenkaan ongelmia. Koskelo-ryhmä oli jo tehnyt Titokoneeseen erinäisiä muutoksia, mutta
+pieniä korjauksia jouduttiin silti tekemään. Käytännössä muutoksia oli noin parikymmentä riviä.
+Kokonaisuudessaan olimme hyvin tyytyväisiä Titokoneeseen.
+
+\subsection{EAssari-kehys}
+
+Tehtävänannossamme sanottiin seuraavasti: "Projekti rakennetaan valmiina olevaan eAssari-kehykseen,
+joka sopii geneerisiin automaattisesti tarkistettavien tehtävien määrittelyyn ja toteutukseen."
+Aluksi näyttikin tältä, ja luulimme että EAssari mahdollistaa nämä kuvatut toiminnot. Projektiryhmän
+käsitys valmiista kehyksestä kuitenkin poikkeaa huomattavasti tästä. 
+EAssarista puutttuu mm. 
+
+\section{Kehittämisnäkymiä}
+
+
+
+\section{Loppusanat}
+Omasta mielestämme onnistuimme projektissa kohtuullisen hyvin. Asiakas oli tuotteeseen tyytyväinen ja
+ainakin tätä raporttia kirjoittaessa näytti siltä, että järjestelmä tullaan todella ottamaan 
+käyttöön.
+
+
 
 \section{Mielin määrin kahvia tupakkaa}
-Kulutus:
 
-Mikko joi monta batteryä
+Mikko joi monta batteryä 
+
+
+Taro kertoi naisseikkailuistaan
+
+
+Jari antoi selonteon Ninjan uusimmista käänteistä
