*** empty log message ***

--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -20,8 +20,8 @@ Suunnitteluvastaavan, koodivastaavan ja testausvastaavan vastuualueita pyöritelt
 kerrallaan ehdokkaat kyllästyivät ja valitsivat jonkin vaihtoehdoista. 
 
 Ryhmämme työskenteli suurimmaksi osaksi ryhmätyömuodossa. Aikaa vietettiin paljon yhdessä ja pääasiallisena
-työskentelytilana oli ATK-luokka Exactumissa. Kaikki ryhmän jäsenet osallistuivat ainakin jollain 
-tasolla projektin kaikkiin työvaiheisiin.
+työskentelytilana oli ATK-luokka Exactumissa. Tässä ATK-luokassa nähtiin lähes joka päivä. 
+Kaikki ryhmän jäsenet osallistuivat ainakin jollain tasolla projektin kaikkiin työvaiheisiin.
 
 \subsection{Aikataulu}
 
@@ -64,9 +64,18 @@ epävirallinen katselmus oli tätä virallista parempi.
 
 
 Ryhmän henki ja ilmapiiri oli erinomainen. Ryhmäläiset tukivat toisiaan, ja apua sai aina kun sitä
-tarvitsi.
+tarvitsi. Ryhmässä oli vahvaa koodiosaamista.
+
+
+//Tähän kuva kaikkien tunneista//
+
 
 \section{Suhteet muihin osajärjestelmiin}
+
+Titotrainerilla oli alun pitäen kaksi ulkoista osajärjestelmää Titokone ja EAssari. Tarkoitus oli että
+EAssarista olisi tullut alusta, jonka päälle Titotrainer voidaan rakentaa. Titokonetta puolestaan käytetään
+konekielisten ohjelmien kääntämiseen ja tarkastamiseen. EAssarin käytöstä kuitenkin myöhemmin kuvatulla tavalla
+osittain luovuttiin.
 
 \subsection{Titokone}
 
@@ -80,10 +89,23 @@ Kokonaisuudessaan olimme hyvin tyytyväisiä Titokoneeseen.
 Tehtävänannossamme sanottiin seuraavasti: "Projekti rakennetaan valmiina olevaan eAssari-kehykseen,
 joka sopii geneerisiin automaattisesti tarkistettavien tehtävien määrittelyyn ja toteutukseen."
 Aluksi näyttikin tältä, ja luulimme että EAssari mahdollistaa nämä kuvatut toiminnot. Projektiryhmän
-käsitys valmiista kehyksestä kuitenkin poikkeaa huomattavasti tästä. 
-EAssarista puutttuu mm. 
+käsitys valmiista kehyksestä kuitenkin poikkeaa huomattavasti tästä. Koska projektin tavoitteena oli
+luoda järjestelmä, joka voitaisiin ottaa käyttöön nopeasti projektin päättymisen jälkeen, niin 
+totesimme parhaaksi ratkaisuksi jättää kehys täysin projektin ulkopuolelle. Käytimme kuitenkin
+EAssarin tietokantaa sellaisenaan, jotta Titotrainer olisi tulevaisuudessa helposti siirrettävissä
+jatkokehitettyyn EAssari-kehykseen. 
+
+EAssarista puutttuu mm. käyttäjän rekisteröityminen, käyttäjän tietojen muokkaaminen, käyttäjän 
+kirjautuminen, kurssien ja moduulien hallinnointi, tehtävien selaaminen ja suoritustilastojen 
+katsominen. Kaikki listassa mainitut toiminnot kuuluvat mielestämme jokaiseen tämän tyyppiseen
+valmiiksi kuvattuun kehykseen. Koska toimintoja ei ollut, jouduimme toteuttamaan ne itse. 
+Toteutuksessa ei kuitenkaan otettu huomioon EAssarin teoriassa mahdollistamaa geneerisyyttä, vaan
+toteutetut ominaisuudet ovat täysin titotrainerkohtaisia.
 
 \section{Kehittämisnäkymiä}
+
+Jos tulevaisuudessa EAssarista tehtäisiin toimiva alusta erilaisille järjestelmille, Titotrainerin voisi
+liittää kohtuullisella vaivalla siihen.
 
 
 
