*** empty log message ***

--- a/Documents/yhteenvetodokumentti/dokumentti.tex
+++ b/Documents/yhteenvetodokumentti/dokumentti.tex
@@ -12,7 +12,7 @@
 % Sis‰lt‰‰ kansi- ja etusivun tietoja.
 \input{asetukset}
 
-\title{Yhteenvetodokumentti}
+\title{Loppuraportti}
 \date{\today}
 
 \begin{document}
