--- a/Documents/yhteenvetodokumentti/sisalto.tex
+++ b/Documents/yhteenvetodokumentti/sisalto.tex
@@ -13,7 +13,9 @@ luennoitaessa. Kurssin opiskelijat voivat käydä ratkaisemassa järjestelmässä teh
 saa tästä tilastotietoa.
 
 
-\section{Projektin kulku}
+\section{Projekti}
+
+\subsection{Projektin kulku}
 Projekti käynnistettiin 4.9.2006. Tällöin pidetyssä aloituspalaverissa vastuualueet jaettiin melko sujuvasti.
 Projektipäällikön, vaatimusmäärittelyvastaavan ja dokumentointivastaavan paikat jaettiin halukkaille.
 Suunnitteluvastaavan, koodivastaavan ja testausvastaavan vastuualueita pyöriteltiin aikansa, kunnes yksi 
@@ -102,11 +104,33 @@ valmiiksi kuvattuun kehykseen. Koska toimintoja ei ollut, jouduimme toteuttamaan
 Toteutuksessa ei kuitenkaan otettu huomioon EAssarin teoriassa mahdollistamaa geneerisyyttä, vaan
 toteutetut ominaisuudet ovat täysin titotrainerkohtaisia.
 
+\section{Projektityöskentely}
+
+\section{Ohjaaja}
+Ohjaajamme Sanna Keskioja oli erittäin pätevä ja asiansa hallitseva. Sannalta saimme rakentavaa tukea
+kokouksissa ja hän hoiti saumattomasti tarvitsemiemme tilojen ja resurssien hankkimisen.
+
+Sannalla oli hyvä asenne hommaan, ja olisi ollut vaikeaa kuvitella Sannaa parempaa ohjaajaa tälle projektille.
+
+
+
+
+\section{Asiakkaat}
+Asiakkaallamme Teemu Kerolalla oli selkeä näkemys tarvittavasta tuotteesta, ja Teemu osasi selkeästi
+tuoda julki järjestelmän yksityiskohtaiset tarpeet. Osaltaan tähän varmasti vaikutti, että järjestelmä
+on ollut ohjelmistotuotantoprojektin aiheena myös aiemmin. Pyrimme hyödyntämään asiakkaan palautetta
+projektin eri vaiheissa. Iteratiivisen prosessimallin vuoksi kaikkia vaatimuksia ei ollut tarpeen
+jäädyttää heti vaatimusmäärittelyn jälkeen, joten asiakkaalla oli mahdollisuus tarkentaa omia näkemyksiään
+ja tarpeitaan. 
+
+
 \section{Kehittämisnäkymiä}
 
 Jos tulevaisuudessa EAssarista tehtäisiin toimiva alusta erilaisille järjestelmille, Titotrainerin voisi
 liittää kohtuullisella vaivalla siihen.
 
+Tulevaisuudessa järjestelmään voisi liittää dynaamisen tehtävätyypin. Dynaaminen tehtävä on sellainen
+jolle luodaan arvot vasta käynnistyshetkellä.
 
 
 \section{Loppusanat}
@@ -114,7 +138,14 @@ Omasta mielestämme onnistuimme projektissa kohtuullisen hyvin. Asiakas oli tuott
 ainakin tätä raporttia kirjoittaessa näytti siltä, että järjestelmä tullaan todella ottamaan 
 käyttöön.
 
+Projektista opittiin melko paljon. Tutuiksi tulivat CVS niille joille se ei jo ennestään ollut tuttu, ja
+opittiin myös tuntemaan JSP, JSTL, Eclipse, Tomcat-palvelinympäristö.
 
+Ensiarvoisen tärkeää oli että projektissa oli mukana henkilö (Taro "Ass" Morimoto), joka tunsi hyvin Tomcat-ympäristön, 
+Eclipsen ja JSP:n. Näin muut ryhmäläiset saivat tehokkaan pikaperehdytyksen ennestään tuntemattomiin tekniikoihin.
+
+Projektiryhmämme oli ilmeisesti koottu sillä perusteella, että kaikki olivat suorittaneet Käyttöliittymät-kurssin.
+Käyttöliittymä olikin priorisoitu tärkeimmäksi yksittäiseksi osaksi järjestelmää. Kurssin suorittamisesta 
 
 \section{Mielin määrin kahvia tupakkaa}
 
